--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- CSSファイルの読み込み -->
-    <link rel="stylesheet" href="style.css" />
-    <title>CARAVAN</title>
-  </head>
+ <head>
+  <meta charset="UTF-8" />
+  <!-- FontAwesomeの読み込み -->
+
+  <script src="https://kit.fontawesome.com/f224a18b6d.js" crossorigin="anonymous"></script>
+  <!-- CSSファイルの読み込み -->
+  <link rel="stylesheet" href="style.css" />
+  <title>CARAVAN</title>
+ </head>
 
   <body>
     <!-- header -->
     <header>
-      <h1 class="heading">
-        <a href="index.html">
-          CARAVAN
-        </a>
-      </h1>
+     <h1 class="heading">
+      <a href="index.html">CARAVAN</a>
+     </h1>
+
+     <div class="social"></div>
     </header>
 
     <!-- navigation -->
