--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
- <head>
-  <meta charset="UTF-8" />
-  <!-- FontAwesomeの読み込み -->
-
-  <script src="https://kit.fontawesome.com/f224a18b6d.js" crossorigin="anonymous"></script>
-  <!-- CSSファイルの読み込み -->
-  <link rel="stylesheet" href="style.css" />
-  <title>CARAVAN</title>
- </head>
+  <head>
+    <meta charset="UTF-8" />
+    <!-- FontAwesomeの読み込み -->
+    <script src="https://kit.fontawesome.com/*******.js" crossorigin="anonymous"></script>
+    <!-- CSSファイルの読み込み -->
+    <link rel="stylesheet" href="style.css" />
+    <title>CARAVAN</title>
+  </head>
 
   <body>
     <!-- header -->
     <header>
-     <h1 class="heading">
-      <a href="index.html">CARAVAN</a>
-     </h1>
-
-     <div class="social"></div>
+      <h1 class="heading">
+        <a href="index.html">
+          CARAVAN
+        </a>
+      </h1>
+      <div class="social">
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
     </header>
 
     <!-- navigation -->
@@ -126,10 +130,11 @@
           <p>3</p>
           <p>></p>
           <p>>></p>
-        </div>      </section>
+        </div>
+      </section>
       <div class="sidebar">
         <section class="popular">
-          <h2 class="popular-heading common-heading">Popular</h2>
+          <h2 class="sidebar-heading common-heading">Popular</h2>
           <div class="sidebar-contents">
             <p class="popular-text">
               To solve old problems,<br />study new species
