--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- FontAwesomeの読み込み -->
-    <script src="https://kit.fontawesome.com/*******.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f224a18b6d.js" crossorigin="anonymous"></script>
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
     <title>CARAVAN</title>
